# EpdAniyaBox

./: CMakeLists.txt  README.md  partitions.csv  partitions_singleapp.csv  sdkconfig  sdkconfig.defaults
Hardware/: Esp32TRACK.eprj
box/: box1.3_后盖.stl  box1.3_外壳3mm.stl  box1.3_外壳6mm.stl
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_spi_conf.h
main/: CMakeLists.txt  Kconfig.projbuild  battery.c  battery.h  bike_common.c  bike_common.h  ble_csc.c  ble_csc.h  ble_device.c  ble_device.h  ble_hrm.c  ble_hrm.h  common.h  common_utils.c  common_utils.h  epd_lcd_ssd1680.c  epd_lcd_ssd1680.h  epdpaint.c  epdpaint.cpp  epdpaint.h  esp_lcd_panel_ssd1680.c  esp_lcd_panel_ssd1680.h  event_common.h  font12.cpp  font16.c  font16.cpp  font16_2.c  font20.c  font20.cpp  font20_2.c  font24.c  font32_2.c  font64_digi.c  font8.cpp  fonts.h  gps_device_cmd.h  gpx_writer.c  gpx_writer.h  idf_component.yml  kalman_filter.h  (+24 more)
main/ble/: ble_csc.c  ble_csc.h  ble_device.c  ble_device.h  ble_hrm.c  ble_hrm.h  ble_peer.c  ble_peer.h  ble_svc_battery_level.c  ble_svc_battery_level.h  ble_svc_csc.c  ble_svc_csc.h  ble_svc_device_information.c  ble_svc_device_information.h  ble_svc_hrm.c  ble_svc_hrm.h  ble_uuid.h  esp_central.h  misc.c  peer.c
main/bles/: ble_server.c  ble_server.h  gatt_svr.c  gatts_sens.h
main/display/: display.c  display.h  epd_lcd_ssd1680.c  epd_lcd_ssd1680.h  font12.c  font32.c  font8.c  main_page.c
main/lcd/: bitmap_page.c  bitmap_page.h  bmp.c  bmp.h  display.c  display.h  epd_lcd_ssd1680.c  epd_lcd_ssd1680.h  epdpaint.c  epdpaint.h  font12.c  font16.c  font20.c  font24.c  font32.c  font36.c  font8.c  font_hzk16.c  fonts.h  info_page.c  info_page.h  jpg.c  jpg.h  main_page.c  main_page.h  temperature_page.c  temperature_page.h  test_page.c  test_page.h  upgrade_page.c  upgrade_page.h
main/led/: led_strip_encoder.c  led_strip_encoder.h  ws2812.c  ws2812.h
main/page/: bitmap_page.c  bitmap_page.h  ble_device_page.c  ble_device_page.h  dictionary_page.c  dictionary_page.h  image_manage_page.c  image_manage_page.h  image_page.c  image_page.h  info_page.c  info_page.h  main_page.c  main_page.h  manual_page.c  manual_page.h  menu_page.c  menu_page.h  setting_list_page.c  setting_list_page.h  setting_page.c  setting_page.h  temperature_page.c  temperature_page.h  test_page.c  test_page.h  upgrade_page.c  upgrade_page.h
main/static/: app.manifest  index.html  ota.html  static.h  upload_script.html
main/tools/: encode.c  encode.h  kalman_filter.c
main/view/: battery_view.c  battery_view.h  digi_view.c  digi_view.h  list_view.c  list_view.h
main/wifi/: my_file_server_common.h  my_http_file_server.c  my_http_server.c  my_http_server.h  my_mount.c  my_wifi_ota.c  my_wifi_ota.h  wifi_ap.c  wifi_ap.h
